# gpt-ocr

./: Cargo.toml  README.md
scripts/: BUILD_ALL.cmd  BUILD_LINUX.cmd  BUILD_WIN.cmd
src/: main.rs
src/api/: openai.rs
src/api/requests/: openairequest.rs
src/api/responses/: openairesponse.rs
